--- a/index.html
+++ b/index.html
@@ -36,19 +36,9 @@
         <button type="submit" id="submit">Save Goal</button>
       </form>
 
-      <div class="tablegoal">
-        <table>
-          <tr>
-            <th>Goals</th>
-            <th>Date</th>
-          </tr>
-          <tr id="goalTableBody">
-            <td>ho</td>
-            <td>ho</td>
-          </tr>
-        </table>
+      <div class="thegoals">
+       <i>"hello"</i>
       </div>
-    </div>
 
 
     <script src ="https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js"></script>
