--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <button type="submit" id="submit">Save Goal</button>
       </form>
 
-      <div class="thegoals">
-       <i>"hello"</i>
+      <div class="allgoals">
+       <h2>"Goals"</h2>
+       <div class="indgoals">Finish Maths Hwk</div>
       </div>
 
 
