--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <script>
     if('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/Cognify/sw.js', { scope: '/' });
+      navigator.serviceWorker.register('/Cognify/sw.js', { scope: '/Cognify/' });
     }
   </script>
 </html>
