--- a/help.html
+++ b/help.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="shortcut icon" href="https://c.s-microsoft.com/favicon.ico?v2" />
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/Cognify/manifest.json">
     <title>Cognify</title>
 </head>
  
