--- a/help.html
+++ b/help.html
@@ -44,11 +44,11 @@
         </li>
         <li>
           <strong>Q:</strong> Do I need an account to use Cognify? <br>
-          <strong>A:</strong> No, Cognify doesn't require an account. Your data is stored on a database.
+          <strong>A:</strong> No, Cognify doesn't require an account. Your data is stored in a database.
         </li>
         <li>
           <strong>Q:</strong> Is my data safe? <br>
-          <strong>A:</strong> Yes, your data is securely stored with Firebase!
+          <strong>A:</strong> Yes! Your data is securely stored with Firebase.
         </li>
       </ul>
         <p class="intro">
@@ -58,7 +58,7 @@
   
   <script>
     if('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js', { scope: '/' });
+      navigator.serviceWorker.register('/Cognify/sw.js', { scope: '/Cognify/' });
     }
-    </script>
+  </script>
 </html>
