--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
   
   <script>
     if('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js', { scope: '/' });
+      navigator.serviceWorker.register('/Cognify/sw.js', { scope: '/Cognify/' });
     }
-    </script>
+  </script>
 </html>
